--- a/chickens.html
+++ b/chickens.html
@@ -1,4 +1,11 @@
-<h1>Chicken</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Chicken Coltipedia </title>
+        
+    </head>
+    <body>
+        <h1>Chicken</h1>
 
 <p>The <b>chicken</b> (Gallus gallus domesticus) is a type of domesticated fowl, a subspecies of the red junglefowl (Gallus gallus). 
 Chickens are one of the most common and widespread domestic animals, with a total population of 23.7 billion as of 2018.
@@ -31,5 +38,11 @@ Genetic studies have pointed to multiple maternal origins in South Asia, Southea
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae aliquam quidem sapiente consequuntur perspiciatis vero, iste officia voluptate! Cupiditate ipsa, quam soluta expedita assumenda nostrum obcaecati harum? Quaerat, alias illo!
 Dolores molestias blanditiis aperiam qui sint ex perferendis accusantium eaque consequatur soluta quam nobis, magnam possimus debitis reiciendis optio quae nostrum quidem, in nesciunt. Repellat omnis maxime minima et! Voluptatum.
 Doloribus eligendi animi sed quaerat voluptates est magnam officiis sunt voluptatem laboriosam repellendus quam qui, atque quas dolorum neque quae modi. Deserunt sint, possimus omnis odio tenetur non deleniti. Repellendus?</p>
+
+    </body>
+</html>
+
+
+
 
 
