--- a/chickens.html
+++ b/chickens.html
@@ -1,48 +1,100 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Chicken Coltipedia </title>
-        
-    </head>
-    <body>
-        <h1>Chicken</h1>
 
-<p>The <b>chicken</b> (Gallus gallus domesticus) is a type of domesticated fowl, a subspecies of the red junglefowl (Gallus gallus). 
-Chickens are one of the most common and widespread domestic animals, with a total population of 23.7 billion as of 2018.
-[1] up from more than 19 billion in 2011.[2] There are more chickens in the world than any other bird or domesticated fowl.
-[2] Humans keep chickens primarily as a source of food (consuming both their meat and eggs) and, less commonly, as pets.
- Originally raised for cockfighting or for special ceremonies, chickens were not kept for food until the Hellenistic period (4th–2nd centuries BC).[3][4]
-</p>
+<head>
+    <title>Chicken Coltipedia </title>
 
-<p>
-Genetic studies have pointed to multiple maternal origins in South Asia, Southeast Asia, and East Asia,[5] but with the clade found in the Americas, Europe, the Middle East and Africa originating in the Indian subcontinent.
- From ancient India, the domesticated chicken spread to Lydia in western Asia Minor, and to Greece by the 5th century BC.[6] 
- Fowl had been known in Egypt since the mid-15th century BC, with the "bird that gives birth every day" having come to Egypt from the land between Syria and Shinar, Babylonia, according to the annals of Thutmose III.[7][8][9]
-</p>
+</head>
 
-<h2>Terminology</h2>
-<p>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed autem similique voluptatem omnis numquam fuga eveniet perferendis illo quaerat, soluta dolores enim dolorem nulla qui. Numquam sunt expedita et eligendi!
-    Ullam dolore dolorem animi neque quae, labore, ipsum maxime, rerum nisi cum ex! Odit perferendis tenetur nisi, ipsam animi hic quisquam. Accusantium quidem nulla suscipit, ipsa totam debitis reprehenderit aliquam?
-    Repellat cum voluptas repudiandae. Qui asperiores quaerat laudantium debitis dolores commodi quam tempora, harum, placeat accusamus eum et quisquam temporibus odit quasi reiciendis voluptas minus? Beatae sit exercitationem dolore harum!
-    Accusamus enim qui at. In incidunt assumenda, delectus voluptate iste ex excepturi quod vitae atque suscipit dolor, quos doloremque nisi nostrum non cumque natus animi pariatur sunt minus. Nesciunt, corrupti.
-    Natus, corporis ipsam repellendus laborum non reprehenderit sunt tempora accusantium quasi eum magni possimus quibusdam ipsa? At dicta tempora animi distinctio odio debitis incidunt sequi adipisci, vel placeat voluptates ratione!
-</p>
+<body>
+    <h1>Chicken</h1>
+    <!--Alt attribute will be read by screenreader-->
+    <img src="Pictures/stevie_chicks.jpg" alt="My pet chicken, Stevie Chicks">
 
-<h2>General biology and habitat</h2>
-<h3>Behaviour</h3>
-<h4>Social behaviour</h4>
-<h4>Broodiness</h4>
-<h5>I AM H5</h5>
-<h6>I AM H6</h6>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae aliquam quidem sapiente consequuntur perspiciatis vero, iste officia voluptate! Cupiditate ipsa, quam soluta expedita assumenda nostrum obcaecati harum? Quaerat, alias illo!
-Dolores molestias blanditiis aperiam qui sint ex perferendis accusantium eaque consequatur soluta quam nobis, magnam possimus debitis reiciendis optio quae nostrum quidem, in nesciunt. Repellat omnis maxime minima et! Voluptatum.
-Doloribus eligendi animi sed quaerat voluptates est magnam officiis sunt voluptatem laboriosam repellendus quam qui, atque quas dolorum neque quae modi. Deserunt sint, possimus omnis odio tenetur non deleniti. Repellendus?</p>
 
-    </body>
+    <br>
+    <a href="http://www.google.com">I AM A LINK TO GOOGLE!!</a>
+    <a href="about.html">About!!</a>
+
+    <p>The <b>chicken</b> (Gallus gallus domesticus) is a type of domesticated <a
+            href="https://en.wikipedia.org/wiki/Fowl">fowl</a>, a subspecies of the red junglefowl
+        (Gallus gallus).
+        Chickens are one of the most common and widespread domestic animals, with a total population of 23.7 billion as
+        of 2018.
+        [1] up from more than 19 billion in 2011.[2] There are more chickens in the world than any other bird or
+        domesticated fowl.
+        [2] Humans keep chickens primarily as a source of food (consuming both their meat and eggs) and, less commonly,
+        as pets.
+        Originally raised for cockfighting or for special ceremonies, chickens were not kept for food until the
+        Hellenistic period (4th–2nd centuries BC).[3][4]
+    </p>
+
+    <p>
+        Genetic studies have pointed to multiple maternal origins in South Asia, Southeast Asia, and East Asia,[5] but
+        with the clade found in the Americas, Europe, the Middle East and Africa originating in the Indian subcontinent.
+        From ancient India, the domesticated chicken spread to Lydia in western Asia Minor, and to Greece by the 5th
+        century BC.[6]
+        Fowl had been known in Egypt since the mid-15th century BC, with the "bird that gives birth every day" having
+        come to Egypt from the land between Syria and Shinar, Babylonia, according to the annals of Thutmose
+        III.[7][8][9]
+    </p>
+
+    <h2>Terminology</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed autem similique voluptatem omnis numquam fuga
+        eveniet perferendis illo quaerat, soluta dolores enim dolorem nulla qui. Numquam sunt expedita et eligendi!
+        Ullam dolore dolorem animi neque quae, labore, ipsum maxime, rerum nisi cum ex! Odit perferendis tenetur nisi,
+        ipsam animi hic quisquam. Accusantium quidem nulla suscipit, ipsa totam debitis reprehenderit aliquam?
+        Repellat cum voluptas repudiandae. Qui asperiores quaerat laudantium debitis dolores commodi quam tempora,
+        harum, placeat accusamus eum et quisquam temporibus odit quasi reiciendis voluptas minus? Beatae sit
+        exercitationem dolore harum!
+        Accusamus enim qui at. In incidunt assumenda, delectus voluptate iste ex excepturi quod vitae atque suscipit
+        dolor, quos doloremque nisi nostrum non cumque natus animi pariatur sunt minus. Nesciunt, corrupti.
+        Natus, corporis ipsam repellendus laborum non reprehenderit sunt tempora accusantium quasi eum magni possimus
+        quibusdam ipsa? At dicta tempora animi distinctio odio debitis incidunt sequi adipisci, vel placeat voluptates
+        ratione!
+    </p>
+
+    <h2>General biology and habitat</h2>
+    <h3>Behaviour</h3>
+    <h4>Social behaviour</h4>
+    <h4>Broodiness</h4>
+    <h5>I AM H5</h5>
+    <h6>I AM H6</h6>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae aliquam quidem sapiente consequuntur perspiciatis
+        vero, iste officia voluptate! Cupiditate ipsa, quam soluta expedita assumenda nostrum obcaecati harum? Quaerat,
+        alias illo!
+        Dolores molestias blanditiis aperiam qui sint ex perferendis accusantium eaque consequatur soluta quam nobis,
+        magnam possimus debitis reiciendis optio quae nostrum quidem, in nesciunt. Repellat omnis maxime minima et!
+        Voluptatum.
+        Doloribus eligendi animi sed quaerat voluptates est magnam officiis sunt voluptatem laboriosam repellendus quam
+        qui, atque quas dolorum neque quae modi. Deserunt sint, possimus omnis odio tenetur non deleniti. Repellendus?
+    </p>
+    <h2><b>Breeds of Chickens</b></h2>
+    <ul>
+        <li> Bantam
+            <ol>
+                <li>Silkie</li>
+                <li>Polish</li>
+            </ol>
+
+        </li>
+
+        <li> Standard
+            <ul>
+                <li>Easter Egger</li>
+                <li>Rhode Island Red</li>
+            </ul>
+
+        </li>
+
+
+
+
+
+    </ul>
+    <img
+        src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fc/%E0%B0%95%E0%B1%8B%E0%B0%A1%E0%B0%BF_%E0%B0%AA%E0%B0%BF%E0%B0%B2%E0%B1%8D%E0%B0%B2IMG20191207080730-01.jpg/330px-%E0%B0%95%E0%B1%8B%E0%B0%A1%E0%B0%BF_%E0%B0%AA%E0%B0%BF%E0%B0%B2%E0%B1%8D%E0%B0%B2IMG20191207080730-01.jpg">
+</body>
+
 </html>
-
-
-
-
-
